--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
     "stylelint-config-standard": "^26.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.8.4"
-  }
+  },
+  "homepage": "/daniel-dino-jumper"
 }
